--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
   <application
       android:usesCleartextTraffic="true"
       android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
+      android:icon="@drawable/app_icon"
       android:theme="@style/AppTheme"
       android:allowBackup="true"
       android:supportsRtl="false">
@@ -16,8 +16,8 @@
 
     <activity
         android:name=".ActivityMain"
-        android:label=""
         android:exported="true">
+      <!-- Main Launcher activity's label serves as app icon label  -->
 
       <intent-filter>
         <!-- Main = launch point of activity. Launcher = Create an icon to be clicked for this app/(task related to app) -->
@@ -26,12 +26,13 @@
         <!-- Below = Useful for Google indexing + 'DeepLink'ing into app from web or other apps -->
         <!-- <action android:name="android.intent.action.VIEW"/> -->
       </intent-filter>
+      <meta-data android:name="android.app.shortcuts" android:resource="@xml/shortcuts" />
     </activity>
 
     <activity android:name=".ActivityCreateReport"
         android:label=""
-        android:parentActivityName=".ActivityMain"> <!-- PreSDK 21/Android 4.0/IceCreamSandwich used Meta-Data tag instead -->
-
+        android:parentActivityName=".ActivityMain"
+        android:exported="true"> <!-- PreSDK 21/Android 4.0/IceCreamSandwich used Meta-Data tag instead -->
     </activity>
 
     <activity android:name=".ActivityReportList" android:parentActivityName=".ActivityMain"
