Update gradle for Hilt + ViewModel, fix API changes + Espresso Idling in Unit tests, relabel Retrofit API + textViews

--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.1'
+        classpath 'com.android.tools.build:gradle:7.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE : No App dependencies here!
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43.2'
+        // App Dependencies do NOT go here. They go in the module build.gradle file
     }
 }
 
