--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.usc.nlcaceres.infectionprevention">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
   <application
       android:usesCleartextTraffic="true"
+      android:name=".InfectionProtectionApplication"
       android:label="@string/app_name"
       android:icon="@drawable/app_icon"
       android:theme="@style/AppTheme"
