--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:4.4.0'
     testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
     testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4' // Mocks out Dispatcher.Main for coroutines/suspended funs
 
     // Instrumented Test Specific (Emulator based)
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
