--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,26 @@
 [versions]
 androidGradlePlugin = "8.1.4"
-kotlin = "1.8.21"
-androidx-lifecycle = "2.6.1"
+kotlin = "1.9.21"
+kotlinx-coroutines = "1.7.1"
+androidx-lifecycle = "2.6.2"
 accompanist = "0.30.1"
-androidx-navigation = "2.5.3"
-androidx-compose-bom = "2023.05.01"
-hilt = "2.46.1"
+androidx-navigation = "2.6.0"
+androidx-compose-bom = "2023.06.01"
+hilt = "2.49"
 retrofit = "2.9.0"
 espresso = "3.5.1"
 
 [libraries]
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.6.1" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.10.1" }
-androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version = "1.6.0" }
+androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version = "1.6.2" }
 androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle" }
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version = "2.1.4" }
-androidx-preferences-ktx = { module = "androidx.preference:preference-ktx", version = "1.2.0" }
-androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version = "1.3.0" }
+androidx-preferences-ktx = { module = "androidx.preference:preference-ktx", version = "1.2.1" }
+androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version = "1.3.2" }
 androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version = "1.1.0" }
-kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version = "1.7.1" }
+kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "androidx-navigation" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "androidx-navigation" }
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "androidx-compose-bom" }
@@ -42,7 +43,7 @@ google-dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android
 google-dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 squareup-retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 squareup-retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
-squareup-leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version = "2.11" }
+squareup-leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version = "2.12" }
 junit = { module = "junit:junit", version = "4.13.2" }
 androidx-test-ext-junit-ktx = { module = "androidx.test.ext:junit-ktx", version = "1.1.5" }
 androidx-arch-core-testing = { module = "androidx.arch.core:core-testing", version = "2.2.0" }
@@ -50,14 +51,14 @@ androidx-test-espresso-core = { group = "androidx.test.espresso", name = "espres
 androidx-test-espresso-intents = { group = "androidx.test.espresso", name = "espresso-intents", version.ref = "espresso" }
 androidx-test-espresso-contrib = { group = "androidx.test.espresso", name = "espresso-contrib", version.ref = "espresso" }
 androidx-test-espresso-idling-resource = { group = "androidx.test.espresso", name = "espresso-idling-resource", version.ref = "espresso" }
-robolectric = { module = "org.robolectric:robolectric", version = "4.10.3" }
+robolectric = { module = "org.robolectric:robolectric", version = "4.11.1" }
 accompanist-testharness = { group = "com.google.accompanist", name = "accompanist-testharness", version.ref = "accompanist" }
 mockito-inline = { group = "org.mockito", name = "mockito-inline", version = "5.2.0" }
-mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version = "4.1.0" }
-kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version = "1.7.1" }
+mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version = "5.2.1" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 androidx-test-runner = { group = "androidx.test", name = "runner", version = "1.5.2" }
 androidx-test-rules = { group = "androidx.test", name = "rules", version = "1.5.0" }
-kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version = "1.8.10" }
+kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version = "1.8.22" }
 google-dagger-hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
 google-dagger-hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 androidx-compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
