--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <uses-permission android:name="android.permission.INTERNET"/>
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
   <application
-      android:usesCleartextTraffic="true"
       android:name=".InfectionProtectionApplication"
       android:label="@string/app_name"
       android:icon="@drawable/app_icon"
       android:theme="@style/AppTheme"
       android:allowBackup="true"
-      android:supportsRtl="false">
-    <!-- usesCleartext enables dev urls (allows http urls so TODO: Have different values for prod vs dev) -->
+      android:supportsRtl="false"
+      android:usesCleartextTraffic="false">
 
     <activity
         android:name=".ActivityMain"
         android:exported="true">
-      <!-- Main Launcher activity's label serves as app icon label  -->
+      <!-- Main Launcher activity's label serves as app icon label -->
 
       <intent-filter>
         <!-- Main = launch point of activity. Launcher = Create an icon to be clicked for this app/(task related to app) -->
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
-        <!-- Below = Useful for Google indexing + 'DeepLink'ing into app from web or other apps -->
+        <!-- The following `<action />` can be useful for Google indexing + 'DeepLink'ing into app from web or other apps -->
         <!-- <action android:name="android.intent.action.VIEW"/> -->
       </intent-filter>
+
       <meta-data android:name="android.app.shortcuts" android:resource="@xml/shortcuts" />
+
     </activity>
+
   </application>
 
 </manifest>
