Add Compose Compiler Gradle Plugin with new Kotlin 2 build settings
- KAPT currently not compatible with Kotlin 2
BUT newer KSP not compatible with Hilt,
So can't quite fully update to Kotlin 2's preferred setup
- The KAPT issue is only really noticeable since the Compose Compiler
Stability reports are supposedly failing
BUT the reports are actually still emitted even though the command
itself exits on an error that says it temporarily reverted to Kotlin 1.9

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -67,6 +67,7 @@ androidx-compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-mani
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 google-dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 androidx-navigation-safeargs-kotlin = { id = "androidx.navigation.safeargs.kotlin", version.ref = "androidx-navigation"}
