--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ espresso = "3.6.1"
 kaspersky-kaspresso = "1.5.3"
 
 [libraries]
+android-tools-desugar = { module = "com.android.tools:desugar_jdk_libs", version = "2.1.2" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.7.0" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.13.1" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version = "1.8.4" }
